feat: refactoring viajero and viajero frecuente